--- a/frontend/show-do-milhao/src/app/components/navbar/navbar.component.html
+++ b/frontend/show-do-milhao/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
               <a class="nav-link" routerLink="/home">Gestão de perguntas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/teams">Hall da fama</a>
+              <a class="nav-link" routerLink="/hall-da-fama">Hall da fama</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="/"><h5 (click)="logout()" style="color:red">SAIR</h5></a>
