--- a/frontend/show-do-milhao/src/app/components/home/home.component.html
+++ b/frontend/show-do-milhao/src/app/components/home/home.component.html
@@ -3,5 +3,5 @@
     <img id="img" src="https://show-do-milhao.vercel.app/imagens/logo.png" alt="" class="images">
 </div>
 <div class="btn-container">
-    <button class="btn"><p>Jogar</p></button>
+    <button class="btn" (click)="play()"><p>Jogar</p></button>
 </div>
