--- a/frontend/show-do-milhao/src/app/components/navbar/navbar.component.css
+++ b/frontend/show-do-milhao/src/app/components/navbar/navbar.component.css
@@ -2,6 +2,12 @@
     padding-top: 20px;
 }
 
+#img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+
 .card{
     color: inherit;
     text-decoration: none;
