--- a/frontend/show-do-milhao/src/app/components/home/home.component.html
+++ b/frontend/show-do-milhao/src/app/components/home/home.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
+<notifier-container></notifier-container>
+
 <div class="img-container">
     <img id="img" src="https://show-do-milhao.vercel.app/imagens/logo.png" alt="" class="images">
 </div>
