feat: lógica para denunciar pergunta

--- a/frontend/show-do-milhao/src/app/components/play/play.component.html
+++ b/frontend/show-do-milhao/src/app/components/play/play.component.html
@@ -22,6 +22,6 @@
             </div>
         </div>
         <div class="div-img"><img id="img" src="https://show-do-milhao.vercel.app/imagens/logo.png" alt="" class="images"></div>
-       <div class="options"><div class="option"><button>Denunciar pergunta ou reposta</button></div></div>
+       <div class="options"><div class="option"><button (click)="report()">Denunciar pergunta ou reposta</button></div></div>
     </div>
 </div>
