feat: tela de registro

--- a/frontend/show-do-milhao/src/app/components/login/login.component.html
+++ b/frontend/show-do-milhao/src/app/components/login/login.component.html
@@ -33,7 +33,7 @@
   
         <h3 id="h3-btn" class="fw-bold mb-1 text-uppercase" style="color: darkolivegreen;">Crie sua conta</h3>
         <div class="div-btn">
-          <button id="btn-create" type="submit" (click)="redirect()" class="btn btn-lg px-5 mt-3">
+          <button id="btn-create" type="submit" (click)="createAccount()" class="btn btn-lg px-5 mt-3">
             Criar conta
           </button>
         </div>
