feat: tela hall da fama

--- a/frontend/show-do-milhao/src/app/components/halldafama/halldafama.component.css
+++ b/frontend/show-do-milhao/src/app/components/halldafama/halldafama.component.css
@@ -1,19 +1,10 @@
 .row{
-    width: 500px;
+    width: 40%;
     margin: auto;
     padding-top: 100px;
-}
-
-.card{
-    box-shadow: 1px 1px 5px;
-    padding: 15px;
-
-}
-
-.card-top{
     text-align: center;
 }
 
-.card-group{
-    margin-bottom: 50px;
+h3{
+    color: darkolivegreen;
 }
