--- a/frontend/show-do-milhao/src/app/components/user/user.component.html
+++ b/frontend/show-do-milhao/src/app/components/user/user.component.html
@@ -9,11 +9,11 @@
         </div>
         <div class="card-group">
             <label>Nome</label>
-            <p class="card-title text-center" style="color: rgb(116, 116, 116);">{{user.name}}</p>
+            <p class="card-title text-center" style="color: darkolivegreen;">{{user.name}}</p>
         </div>
         <div class="card-group">
             <label>Nickname</label>
-            <p class="card-title text-center" style="color: rgb(116, 116, 116);">{{user.nickname}}</p>
+            <p class="card-title text-center" style="color: darkolivegreen;">{{user.nickname}}</p>
         </div>
         <div class="modal-footer">
             <div id="btn-create">
@@ -26,9 +26,9 @@
 
 <div class="modal" id="exampleModal" tabindex="-1">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content" style="background-color: blanchedalmond;">
             <div class="modal-header">
-                <h5 class="modal-title">Editar meus dados</h5>
+                <h5 class="modal-title" style="color: darkolivegreen;">Editar meus dados</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
