--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,9 +1,6 @@
 <app-navbar></app-navbar>
 <notifier-container></notifier-container>
 
-<div class="img-container">
-    <img id="img" src="https://show-do-milhao.vercel.app/imagens/logo.png" alt="" class="images">
-</div>
-<div class="btn-container">
-    <button class="btn" (click)="play()"><p>Jogar</p></button>
+<div>
+    <button (click)="play()"><p>Jogar</p></button>
 </div>
