--- a/frontend/src/app/components/play/play.component.html
+++ b/frontend/src/app/components/play/play.component.html
@@ -4,24 +4,23 @@
     <div class="div-form">
         <div class="question"><p>{{question?.statement}}</p></div>
         <div class="answers">
-            <button *ngFor="let answer of answers" class="answer" (click)="respond(answer)">{{answer.description}}</button>
+            <button *ngFor="let answer of answers; let i = index" class="answer" (click)="respond(answer)"><div class="div-number">{{i+1}}</div>{{answer.description}}</button>
             <div class="div-btn">
-                <button class="btn" (click)="deleteAnswers()" [disabled]="deletedAnswers">Eliminar duas perguntas</button>
+                <button class="btn" (click)="deleteAnswers()" [disabled]="isDeleted">Eliminar duas perguntas</button>
                 <button class="btn" (click)="stop()">Parar</button>
             </div>
+            <div class="div-btn"><button class="btn" (click)="report()">Denunciar pergunta ou reposta</button></div>
         </div>
     </div>
     <div class="div-info">
         <div class="infos">
             <div class="infos1">
-                <div><h3>Acertando </h3><p>{{info[0]}}</p></div>
+                <div><h3>Acertar </h3><p>{{info[0]}}</p></div>
             </div>
             <div class="infos2">
-                <div><h3>Desistindo </h3><p>{{info[1]}}</p></div>
-                <div><h3>Perdendo </h3><p>{{info[2]}}</p></div>
+                <div><h3>Parar </h3><p>{{info[1]}}</p></div>
+                <div><h3>Errar </h3><p>{{info[2]}}</p></div>
             </div>
         </div>
-        <div class="div-img"><img id="img" src="https://show-do-milhao.vercel.app/imagens/logo.png" alt="" class="images"></div>
-       <div class="options"><div class="option"><button (click)="report()">Denunciar pergunta ou reposta</button></div></div>
     </div>
 </div>
