--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,27 +1,32 @@
-<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body">
+<nav class="navbar navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home">Show do Milhão</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" routerLink="/user">Editar sua conta</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Gestão de perguntas</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/hall-da-fama">Hall da fama</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/"><h5 (click)="logout()" style="color:red">SAIR</h5></a>
-        </li>
-      </ul>
-      <div class="navbar-user">
-        <img id="img" src="{{url_photo}}" alt="" [hidden]="!url_photo">
-        <p class="offcanvas-title" id="offcanvasDarkNavbarLabel">{{name}}</p>
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+      <div class="offcanvas-header">
+        <div class="div-itens">
+          <img id="img" src="{{url_photo}}" alt="" [hidden]="!url_photo">
+          <p class="offcanvas-title" id="offcanvasDarkNavbarLabel">{{name}}</p>
+        </div>
+        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" routerLink="/user">Editar sua conta</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/home">Gestão de perguntas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/hall-da-fama">Hall da fama</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/"><h5 (click)="logout()" style="color:red">SAIR</h5></a>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
