feat: adicionando estrutura inicial da tela de gestão de perguntas

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
             <a class="nav-link" aria-current="page" routerLink="/user">Editar sua conta</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/home">Gestão de perguntas</a>
+            <a class="nav-link" routerLink="/question-management">Gestão de perguntas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/hall-da-fama">Hall da fama</a>
