feat: adicionando botão de pesquisa na tela de gestão de perguntas

--- a/frontend/src/app/components/question-management/question-management.component.html
+++ b/frontend/src/app/components/question-management/question-management.component.html
@@ -35,7 +35,7 @@
     </div>
     <div class="mt-3 container">
       <div class="page-size">
-        Itens por busca:
+        <p>Itens por busca:</p>
         <select (change)="handlePageSizeChange($event)">
           <option *ngFor="let size of pageSizes" [ngValue]="size">
             {{ size }}
