--- a/frontend/src/app/components/question-management/question-management.component.html
+++ b/frontend/src/app/components/question-management/question-management.component.html
@@ -1,12 +1,14 @@
+<app-navbar></app-navbar>
 
 <div class="p-5 pb-0">
     <div class="row">
       <div class="col-10">
         <div id="div-search" class="input-group mb-3">
-            <select name="questions" id="questions" [(ngModel)]="accepted">
-              <option value="false">tipo de perguntas</option>
-              <option value="true">aceitos</option>
-              <option value="false">não aceitos</option>
+            <select class="ls-custom-select" name="questions" id="questions" [(ngModel)]="type">
+              <option value="all">tipo de perguntas</option>
+              <option value="all">todas</option>
+              <option value="true">aceitas</option>
+              <option value="false">não aceitas</option>
             </select>
             <select name="questions" id="questions" [(ngModel)]="ordination">
                 <option value="desc">tipo de ordenação</option>
@@ -16,10 +18,13 @@
                 <option value="false">não aceitos</option>
             </select>
             <div class="input-group-append">
-                <button (click)="searchQuestions()" class="btn btn-outline-secondary" type="button">Pesquisar</button>
+                <button (click)="searchQuestions()" class="btn btn-info" type="button">Pesquisar</button>
             </div>
             <div class="input-group-append">
-                <a routerLink="#" class="btn btn-outline-success" (click)="addQuestion()" data-bs-toggle="modal" data-bs-target="#exampleModal">+Adiconar</a>
+                <a routerLink="#" class="btn btn-success" (click)="addQuestion()" data-bs-toggle="modal" data-bs-target="#exampleModal">+Adiconar</a>
+            </div>
+            <div class="input-group-append">
+              <a class="btn btn-primary" type="button" routerLink="/question-management/approvals">Validação de perguntas</a>
             </div>
         </div>
       </div>
@@ -30,7 +35,41 @@
     <div class="row">
       <h3>Perguntas aceitas e não aceitas</h3>
       <ul class="list-group list-group-flush" *ngFor="let question of questions | paginate : { itemsPerPage: pageSize, currentPage: page, totalItems: count}; let i = index">
-        <li class="list-group-item">{{question.statement}}</li>
+        <ng-container *ngIf="question.accepted">
+          <li class="list-group-item" id="li1">
+            <div class="div-li">
+              <div class="div-question">
+                {{question.statement}}
+              </div>
+              <div class="div-icon">
+                <svg id="svg-sucess" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-square" viewBox="0 0 16 16">
+                  <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                  <path d="M10.97 4.97a.75.75 0 0 1 1.071 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.235.235 0 0 1 .02-.022z"/>
+                </svg>
+              </div>
+            </div>
+          </li>
+        </ng-container>
+        <ng-container *ngIf="!question.accepted">
+          <li class="list-group-item" id="li1">
+            <div class="div-li">
+              <div class="div-question">
+                {{question.statement}}
+              </div>
+              <div class="div-icon">
+                <a routerLink="#" class="btn-icon btn-group" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  <svg id="svg-edit" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                    <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                  </svg>
+                </a>
+                <svg id="svg-attention" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+                  <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.146.146 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.163.163 0 0 1-.054.06.116.116 0 0 1-.066.017H1.146a.115.115 0 0 1-.066-.017.163.163 0 0 1-.054-.06.176.176 0 0 1 .002-.183L7.884 2.073a.147.147 0 0 1 .054-.057zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z"/>
+                  <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
+                </svg>
+              </div>
+            </div>
+          </li>
+        </ng-container>
       </ul>
     </div>
     <div class="mt-3 container">
@@ -64,4 +103,43 @@
         </ul>
       </div>
     </div>
+</div>
+
+<div class="modal" id="exampleModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title">Editar pergunta</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <form [formGroup]="formUser" id="form">
+                  
+                  <div class="form-outline form-white mb-2">
+                      <label>Nome</label>
+                      <input class="input" type="text" formControlName="name" placeholder="Nome">
+                  </div>
+          
+                  <div class="form-outline form-white mb-2">
+                      <label>Nickname</label>
+                      <input class="input" type="nickname" formControlName="nickname" placeholder="Nickname">
+                  </div>
+                  
+                  <div class="form-outline form-white mb-2">
+                      <label>Redefinir senha</label>
+                      <input class="input" type="password" formControlName="password" placeholder="Senha">
+                  </div>
+                  
+                  <div class="form-outline form-white mb-2">  
+                      <label>Avatar</label>
+                      <input class="input" type="text" formControlName="url_photo" placeholder="URL da foto" required>
+                  </div>
+              </form>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Fechar</button>
+              <button type="button" class="btn btn-outline-warning" style="margin: 5px" (click)="addQuestion()" data-bs-dismiss="modal">Editar</button>
+          </div>
+    </div>
+  </div>
 </div>
